# FormuLab

./: .gitignore  AGENTS.md  CITATION.cff  PROGRESS.md  README.md  package.json  pnpm-lock.yaml
.FormuLab/: runs.db
.openscience/: runs.db
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: artifact_file.rs  attachments.rs  compute.rs  examples.rs  formulation.rs  formulation_advanced.rs  formulation_v2.rs  formulations.rs  git_snapshot.rs  goal.rs  jupyter.rs  kernel.rs  large_file.rs  lib.rs  macos.rs  masterdata.rs  materials.rs  modal.rs  opencode_config.rs  preview_server.rs  project.rs  provenance.rs  runs.rs  runs_index.rs  runtime.rs  science_mcp.rs  tools.rs  updates.rs  uv.rs  workspace.rs
docs/: ADVANCED_OPTIMIZER.md  APPROVAL_MANUAL_SMOKE_TEST.md  APPROVAL_POLICIES.md  APPROVAL_READINESS.md  APPROVAL_WORKFLOW.md  ATTACHMENTS.md  COMPATIBILITY_ENGINE.md  CONNECT_YOUR_TOOLS.md  CORRECTIVE_ACTIONS.md  COST_ENGINE.md  DOSSIER_EVIDENCE.md  DOSSIER_READINESS.md  DOSSIER_REQUIREMENTS.md  DOSSIER_REVIEWS.md  DOSSIER_SUBMISSIONS.md  EAC_MARKET_PROFILES.md  EVIDENCE_MATRIX.md  FORMULA_BUILDER.md  FORMULA_VERSIONING.md  IMPORT_EXPORT.md  INFEASIBILITY_ANALYSIS.md  INFORMATION_ARCHITECTURE.md  LABORATORY_TRIALS.md  LAB_STABILITY_APPROVAL.md  MATERIAL_SUBSTITUTION.md  MIGRATIONS.md  MULTI_OBJECTIVE_OPTIMIZATION.md  NAVIGATION_AND_CONTEXT.md  OPTIMIZATION_CONSTRAINTS.md  OPTIMIZATION_SCENARIOS.md  OPTIMIZER_UI_VERIFICATION.md  PRD.md  PRECISION_POLICY.md  PROPERTY_TARGETS.md  RAW_MATERIALS.md  (+25 more)
(+251 files in other folders)
